@@ -4,6 +4,7 @@
  - Added comment publishing.
  - Added note publishing.
  - Added link publishing.
+ - Added event publishing.
 
 0.0500 August 10, 2010
  - Added feed/wall publishing.
